Fix margins so that the badge charts will center align

--- a/src/css/report.styl
+++ b/src/css/report.styl
@@ -20,13 +20,13 @@ body
 .vega-chart-container,
 .vega-chart > canvas {
   min-width: 250px !important
-  margin: 1rem 2rem
+  margin: 1rem auto
 }
 
 .vega-chart-badge-container {
   min-width 250px !important
   max-width 500px
-  margin 1rem 2rem
+  margin 1rem auto
 }
 
 .vega-chart-toggle-true
